[package]
name = "rs-cord"
version = "0.0.0"
edition = "2021"
authors = [
    "jay3332",
    "Cryptex",
]
keywords = [
    "discord",
    "api",
    "discord-api",
    "wrapper",
    "bot",
    "discord-bot",
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jay3332/rs-cord"
repository = "https://github.com/jay3332/rs-cord"
documentation = "https://docs.rs/rs-cord/latest/rs_cord"
description = "A high-level Rust crate around the Discord API, aimed to be easy and straight-forward to use."

[dependencies]
async-trait = "0.1.52"
bitflags = "1.3"
futures-util = "0.3"
int-enum = "0.4"
serde_json = "1.0"
serde_repr = "0.1"
url = "2.2"

[dependencies.chrono]
version = "0.4"
optional = true

[dependencies.leaky-bucket-lite]
version = "0.5"
features = ["parking_lot"]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "multipart", "stream", "rustls-tls"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.flate2]
version = "1.0"
features = ["rust_backend"]
default-features = false

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.tokio-tungstenite]
version = "0.16"
default-features = false
features = ["connect", "rustls-tls-webpki-roots"]

[dependencies.tracing]
version = "0.1"
features = ["log"]

[features]
default = ["chrono"]
