[package]
name = "rs-cord-model"
version = "0.0.0"
edition = "2021"
authors = [
    "jay3332",
    "Cryptex",
]
keywords = [
    "discord",
    "api",
    "discord-api",
    "wrapper",
    "bot",
    "discord-bot",
]
license = "MIT"
readme = "../README.md"
homepage = "https://github.com/jay3332/rs-cord"
repository = "https://github.com/jay3332/rs-cord"
documentation = "https://docs.rs/rs-cord/latest/rs_cord"
description = "A high-level Rust crate around the Discord API, aimed to be easy and straight-forward to use."

[dependencies]
serde = { version = "1", features = ["derive"] }
